Few tests - dmesg-warn/ abort - WARNING: .* at drivers/gpu/drm/i915/intel_runtime_pm.c:.* intel_runtime_pm_driver_release
<4> [312.476599] ------------[ cut here ]------------
<4> [312.476607] i915 0000:00:02.0: [drm] i915 raw-wakerefs=1 wakelocks=1 on cleanup
<4> [312.476643] WARNING: CPU: 4 PID: 2050 at drivers/gpu/drm/i915/intel_runtime_pm.c:443 intel_runtime_pm_driver_release+0x5c/0x70 [i915]
<4> [312.476891] Modules linked in: snd_hda_intel snd_intel_dspcfg snd_hda_codec snd_hwdep snd_hda_core snd_pcm i915 drm_display_helper drm_kms_helper prime_numbers i2c_algo_bit ttm drm_buddy x86_pkg_temp_thermal coretemp btusb kvm_intel btrtl wmi_bmof btintel btbcm kvm bluetooth crct10dif_pclmul igc crc32_pclmul ghash_clmulni_intel ptp video pps_core i2c_i801 i2c_mux mei_me thunderbolt i2c_smbus mei intel_lpss_pci wmi fuse [last unloaded: drm_kms_helper]
<4> [312.476994] CPU: 4 UID: 0 PID: 2050 Comm: kworker/u32:10 Tainted: G U 6.12.0-rc7-CI_DRM_15689-g169c7cd31a37+ #1
<4> [312.477002] Tainted: [U]=USER
<4> [312.477006] Hardware name: Intel(R) Client Systems NUC11TNHi5/NUC11TNBi5, BIOS TNTGL357.0042.2020.1221.1743 12/21/2020
<4> [312.477010] Workqueue: async async_run_entry_fn
<4> [312.477023] RIP: 0010:intel_runtime_pm_driver_release+0x5c/0x70 [i915]
<4> [312.477299] Code: fc 10 48 8b 5f 50 48 85 db 75 03 48 8b 1f e8 2b 2e 32 e1 45 89 e0 89 e9 48 89 da 48 89 c6 48 c7 c7 b8 1c 9e a0 e8 64 3e af e0 <0f> 0b 5b 5d 41 5c c3 cc cc cc cc 66 0f 1f 84 00 00 00 00 00 90 90
<4> [312.477307] RSP: 0018:ffffc90001727d60 EFLAGS: 00010282
<4> [312.477315] RAX: 0000000000000000 RBX: ffff888102328a90 RCX: 0000000000000000
<4> [312.477319] RDX: 0000000000000002 RSI: ffffc90001727c08 RDI: 00000000ffffffff
<4> [312.477323] RBP: 0000000000000001 R08: 000000010000064a R09: 0000000000000001
<4> [312.477326] R10: 000000010000064a R11: ffff8884b037f000 R12: 0000000000000001
<4> [312.477330] R13: ffff888102429000 R14: ffff88815d303310 R15: 000000000002e5cc
<4> [312.477334] FS: 0000000000000000(0000) GS:ffff8884a0100000(0000) knlGS:0000000000000000
<4> [312.477338] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [312.477342] CR2: 00007ffbdad0e060 CR3: 000000000263a002 CR4: 0000000000f72ef0
<4> [312.477346] PKRU: 55555554
<4> [312.477349] Call Trace:
<4> [312.477353] <TASK>
<4> [312.477357] ? __warn+0x8c/0x190
<4> [312.477367] ? intel_runtime_pm_driver_release+0x5c/0x70 [i915]
<4> [312.477581] ? report_bug+0x191/0x1c0
<4> [312.477589] ? prb_read_valid+0x16/0x20
<4> [312.477599] ? handle_bug+0x53/0x90
<4> [312.477607] ? exc_invalid_op+0x17/0x70
<4> [312.477612] ? asm_exc_invalid_op+0x1a/0x20
<4> [312.477626] ? intel_runtime_pm_driver_release+0x5c/0x70 [i915]
<4> [312.477841] i915_drm_suspend_late+0x10e/0x120 [i915]
<4> [312.478042] ? __pfx_pci_pm_suspend_late+0x10/0x10
<4> [312.478051] dpm_run_callback+0xa1/0x270
<4> [312.478061] device_suspend_late+0x99/0x220
<4> [312.478068] async_suspend_late+0x18/0x30
<4> [312.478074] async_run_entry_fn+0x2c/0x130
<4> [312.478083] process_one_work+0x1fe/0x6a0
<4> [312.478096] worker_thread+0x1d7/0x390
<4> [312.478103] ? __pfx_worker_thread+0x10/0x10
<4> [312.478109] kthread+0xea/0x120
<4> [312.478116] ? __pfx_kthread+0x10/0x10
<4> [312.478124] ret_from_fork+0x2c/0x50
<4> [312.478130] ? __pfx_kthread+0x10/0x10
<4> [312.478137] ret_from_fork_asm+0x1a/0x30
<4> [312.478151] </TASK>
<4> [312.478154] irq event stamp: 20167
<4> [312.478158] hardirqs last enabled at (20173): [<ffffffff81141309>] __up_console_sem+0x59/0x80
<4> [312.478165] hardirqs last disabled at (20178): [<ffffffff811412ee>] __up_console_sem+0x3e/0x80
<4> [312.478171] softirqs last enabled at (19940): [<ffffffff810a5787>] irq_exit_rcu+0x87/0xe0
<4> [312.478177] softirqs last disabled at (19935): [<ffffffff810a5787>] irq_exit_rcu+0x87/0xe0
<4> [312.478182] ---[ end trace 0000000000000000 ]---
<7> [312.478327] PM: late suspend of devices complete after 23.150 msecs
<6> [312.485595] ACPI: EC: interrupt blocked
<4> [312.536399] snd_hda_intel 0000:00:1f.3: Codec #2 probe error; disabling it...
<3> [312.536417] snd_hda_intel 0000:00:1f.3: no codecs initialized
<7> [312.622141] PM: noirq suspend of devices complete after 141.611 msecs
<6> [312.622156] ACPI: \_SB_.PR00: LPI: Device not power manageable
<6> [312.622163] ACPI: \_SB_.PR01: LPI: Device not power manageable
<6> [312.622168] ACPI: \_SB_.PR02: LPI: Device not power manageable
<6> [312.622172] ACPI: \_SB_.PR03: LPI: Device not power manageable
<6> [312.622177] ACPI: \_SB_.PR04: LPI: Device not power manageable
<6> [312.622181] ACPI: \_SB_.PR05: LPI: Device not power manageable
<6> [312.622185] ACPI: \_SB_.PR06: LPI: Device not power manageable
<6> [312.622190] ACPI: \_SB_.PR07: LPI: Device not power manageable
<6> [312.622211] ACPI: \_SB_.PC00.CNVW: LPI: Constraint not met; min power state:D3hot current power state:D0
<6> [312.622221] ACPI: \_SB_.PC00.HECI: LPI: Device not power manageable
<6> [312.622247] ACPI: \_SB_.PC00.TRP1: LPI: Constraint not met; min power state:D3hot current power state:D0
<6> [312.622256] ACPI: \_SB_.PC00.TRP2: LPI: Constraint not met; min power state:D3hot current power state:D0
<6> [312.622263] ACPI: \_SB_.PC00.GNA0: LPI: Device not power manageable
<6> [312.623336] ACPI: \_SB_.PEPD: Successfully transitioned to state screen off
<6> [312.625401] ACPI: \_SB_.PEPD: Successfully transitioned to state lps0 entry
<7> [312.625404] PM: suspend-to-idle
<7> [312.737656] i915 0000:00:02.0: [drm:intel_power_well_disable [i915]] disabling PW_3
<3> [312.737935] i915 0000:00:02.0: [drm] *ERROR* Lost access to MMIO BAR; all registers now read back as 0xFFFFFFFF!
<7> [312.738021] i915 0000:00:02.0: [drm:fwtable_read32 [i915]] Unclaimed access detected before read from register 0x45404
<3> [312.738219] i915 0000:00:02.0: [drm] *ERROR* Lost access to MMIO BAR; all registers now read back as 0xFFFFFFFF!
<4> [312.738222] ------------[ cut here ]------------
<4> [312.738223] i915 0000:00:02.0: [drm] Unclaimed read from register 0x45404
<4> [312.738237] WARNING: CPU: 6 PID: 48 at drivers/gpu/drm/i915/intel_uncore.c:1759 fwtable_read32+0x330/0x370 [i915]
<4> [312.738334] Modules linked in: snd_hda_intel snd_intel_dspcfg snd_hda_codec snd_hwdep snd_hda_core snd_pcm i915 drm_display_helper drm_kms_helper prime_numbers i2c_algo_bit ttm drm_buddy x86_pkg_temp_thermal coretemp btusb kvm_intel btrtl wmi_bmof btintel btbcm kvm bluetooth crct10dif_pclmul igc crc32_pclmul ghash_clmulni_intel ptp video pps_core i2c_i801 i2c_mux mei_me thunderbolt i2c_smbus mei intel_lpss_pci wmi fuse [last unloaded: drm_kms_helper]
<4> [312.738364] CPU: 6 UID: 0 PID: 48 Comm: kworker/6:0 Tainted: G U W 6.12.0-rc7-CI_DRM_15689-g169c7cd31a37+ #1
<4> [312.738366] Tainted: [U]=USER, [W]=WARN
<4> [312.738367] Hardware name: Intel(R) Client Systems NUC11TNHi5/NUC11TNBi5, BIOS TNTGL357.0042.2020.1221.1743 12/21/2020
<4> [312.738369] Workqueue: events azx_probe_work [snd_hda_intel]
<4> [312.738372] RIP: 0010:fwtable_read32+0x330/0x370 [i915]
<4> [312.738465] Code: 03 48 8b 17 48 89 14 24 e8 fd d8 31 e1 48 8b 14 24 41 89 d8 48 c7 c1 93 4e a5 a0 48 89 c6 48 c7 c7 e0 25 9e a0 e8 30 e9 ae e0 <0f> 0b 49 8b 47 08 83 a8 4c 28 00 00 01 e9 73 fe ff ff 49 8d 7f 38
<4> [312.738466] RSP: 0018:ffffc90000283be0 EFLAGS: 00010086
<4> [312.738468] RAX: 0000000000000000 RBX: 0000000000045404 RCX: 0000000000000000
<4> [312.738470] RDX: 0000000000000004 RSI: ffffc90000283a88 RDI: 00000000ffffffff
<4> [312.738471] RBP: 0000000000000001 R08: 0000000100000696 R09: 0000000000000001
<4> [312.738472] R10: 0000000100000696 R11: ffff8884b037f000 R12: 00000000ffffffff
<4> [312.738473] R13: 0000000000000202 R14: ffff88815d302950 R15: ffff88815d302930
<4> [312.738474] FS: 0000000000000000(0000) GS:ffff8884a0180000(0000) knlGS:0000000000000000
<4> [312.738476] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [312.738477] CR2: 00007ff0886ee200 CR3: 000000000263a002 CR4: 0000000000f72ef0
<4> [312.738478] PKRU: 55555554
<4> [312.738479] Call Trace:
<4> [312.738481] <TASK>
<4> [312.738482] ? __warn+0x8c/0x190
<4> [312.738487] ? fwtable_read32+0x330/0x370 [i915]
<4> [312.738579] ? report_bug+0x191/0x1c0
<4> [312.738582] ? prb_read_valid+0x16/0x20
<4> [312.738586] ? handle_bug+0x53/0x90
<4> [312.738590] ? exc_invalid_op+0x17/0x70
<4> [312.738591] ? asm_exc_invalid_op+0x1a/0x20
<4> [312.738597] ? fwtable_read32+0x330/0x370 [i915]
<4> [312.738691] hsw_power_well_disable+0x7c/0xe0 [i915]
<4> [312.738829] __intel_display_power_put_domain+0xd6/0x1a0 [i915]
<4> [312.738964] ? snd_hdac_display_power+0x31/0x120 [snd_hda_core]
<4> [312.738973] intel_display_power_put+0x2f/0x50 [i915]
<4> [312.739107] snd_hdac_display_power+0xff/0x120 [snd_hda_core]
<4> [312.739114] azx_free+0xc9/0x1a0 [snd_hda_intel]
<4> [312.739117] azx_dev_free+0xd/0x20 [snd_hda_intel]
<4> [312.739119] __snd_device_free+0x47/0xc0
<4> [312.739123] snd_device_free_all+0x60/0x80
<4> [312.739126] release_card_device+0x1f/0x80
<4> [312.739128] device_release+0x2f/0x90
<4> [312.739132] kobject_put+0x8b/0x1d0
<4> [312.739134] snd_card_free+0x64/0x90
<4> [312.739138] process_one_work+0x1fe/0x6a0
<4> [312.739143] worker_thread+0x1d7/0x390
<4> [312.739146] ? __pfx_worker_thread+0x10/0x10
<4> [312.739148] kthread+0xea/0x120
<4> [312.739150] ? __pfx_kthread+0x10/0x10
<4> [312.739153] ret_from_fork+0x2c/0x50
<4> [312.739155] ? __pfx_kthread+0x10/0x10
<4> [312.739158] ret_from_fork_asm+0x1a/0x30
<4> [312.739164] </TASK>
<4> [312.739165] irq event stamp: 598776
<4> [312.739165] hardirqs last enabled at (598775): [<ffffffff81d5d933>] _raw_spin_unlock_irq+0x23/0x50
<4> [312.739168] hardirqs last disabled at (598776): [<ffffffff81d5d6d2>] _raw_spin_lock_irqsave+0x52/0x60
<4> [312.739170] softirqs last enabled at (598406): [<ffffffff810a5787>] irq_exit_rcu+0x87/0xe0
<4> [312.739172] softirqs last disabled at (598399): [<ffffffff810a5787>] irq_exit_rcu+0x87/0xe0
<4> [312.739174] ---[ end trace 0000000000000000 ]---